--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-4">
           <div id="root">
-            <div class="input-group">
+            <div class="input-group" style="margin-top: 20px">
               <input type="text" class="form-control"></input>
               <span class="input-group-addon timezone"></span>
             </div>
